Fix padding overflow on desktop.

--- a/style/style.css
+++ b/style/style.css
@@ -554,7 +554,7 @@ ul.bxslider {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    padding: 0.5% 0;
+    padding: 0;
   }
   .labelBox {
     max-width: 50%;
@@ -571,4 +571,10 @@ ul.bxslider {
     padding-top: 0;
     align-self: center;
   }
+  #formContain {
+    padding: 0;
+  }
+  #submitbutton {
+    margin-bottom: 0;
+}
 }
